# px4-container

./: .gitignore  CHANGELOG.md  README.md
AirSim/: Dockerfile  Dockerfile-ros2  README.md  aptdeps.txt  build_order.drawio  docker-compose.yml  entrypoint-px4.sh  entrypoint-sim.sh  entrypoint.sh  entrypoint2.sh  pydeps.txt
AirSim-Gazebo/: Dockerfile  docker-compose.yml  entrypoint-px4.sh  entrypoint-sim.sh
AirSim-Gazebo/models/AirSim/typhoon_h480/: TyphoonH480.json
AirSim-Gazebo/models/Gazebo/typhoon_inha/: typhoon_inha.sdf
AirSim-Gazebo/ros2/: airsim_ros_wrapper.cpp
AirSim/models/typhoon_h480/: Px4MultirotorParams.hpp  TyphoonH480.json
AirSim/models/typhoon_h480/include/vehicles/multirotor/: MultiRotorParams.hpp  RotorParams.hpp
AirSim/python/: clearObject.py  moveUAV.py  readImage.py  readVoxel.py  spawnObject.py  voxelGrid.py
AirSim/ros2/: airsim_ros_wrapper.cpp
AirSim/ros_ws/src/integration/: package.xml  setup.cfg  setup.py
AirSim/ros_ws/src/integration/integration/: offboard.py
AirSim/scripts/: run_px4.sh  run_rtps_node.sh
AirSim/settings/: general.json  pawn.json  pawn].json  px4SITL.json  sensors.json  typhoon_h480_inha
Base/: Dockerfile  README.md  aptdeps.txt  build_order.drawio  entrypoint.sh  pydeps_cpu.txt  pydeps_gpu.txt
Gazebo/: Dockerfile  README.md  aptdeps.txt  docker-compose-attoman.yml  docker-compose.yml  entrypoint.sh
Gazebo/gazebo_ros/src/model_spawn/: package.xml  setup.cfg  setup.py
Gazebo/gazebo_ros/src/model_spawn/model_spawn/: model_spawn.py  model_spawn_srvs
Gazebo/gazebo_ros/src/model_spawn_srvs/: CMakeLists.txt  package.xml
Gazebo/gazebo_ros/src/model_spawn_srvs/srv/: MakeWorld.srv  MapGeneration.srv
Gazebo/models/QTR/meshes/: drone_prop4_blrrud.DAE  prop_ccw.DAE  prop_cw.DAE
Gazebo/models/QTR_inha/: QTR_inha.sdf
Gazebo/models/depth_camera/: depth_camera.sdf
Gazebo/models/fire/: model.config  model.sdf
Gazebo/models/grass_plane/: model.config  model.sdf
Gazebo/models/iris/: iris.sdf
Gazebo/models/oak_tree_big/meshes/: oak_tree_big.dae
Gazebo/models/oak_tree_small/: model.sdf
Gazebo/models/oak_tree_small/meshes/: oak_tree_small.dae
Gazebo/models/pine_tree/: model.sdf
Gazebo/models/pine_tree/meshes/: pine_tree_small.dae
Gazebo/models/pine_tree_small/: model.sdf
Gazebo/models/realsense_d455/: model.config  model.sdf
Gazebo/models/typhoon_h480/: typhoon_h480.sdf  typhoon_h480.sdf.jinja
Gazebo/models/typhoon_inha/: typhoon_inha.sdf
Gazebo/plugins/: CMakeLists.txt  rtGetInf.c
Gazebo/plugins/include/: dryden_code_gen.h  dryden_code_gen_private.h  dryden_code_gen_types.h  gazebo_dryden_plugin.h  gazebo_motor_model.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtw_continuous.h  rtw_solver.h  rtwtypes.h
Gazebo/plugins/msgs/: Wind.proto
Gazebo/plugins/src/: dryden_code_gen.c  dryden_code_gen_data.c  gazebo_dryden_plugin.cpp  gazebo_motor_model.cpp  rtGetNaN.c  rt_nonfinite.c
Gazebo/ros_ws/src/a4vai/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
Gazebo/ros_ws/src/integration/: package.xml  setup.py
Gazebo/ros_ws/src/integration/integration/: Jeonbuklog.txt  Kaistlog.txt  integration_offboard.py
Gazebo/ros_ws/src/msg_srv_act_interface/: CMakeLists.txt  package.xml
Gazebo/ros_ws/src/msg_srv_act_interface/msg/: CA2Control.msg  PFAtt2Control.msg  PFAtt2PFGuid.msg  PFGpr2PFGuid.msg  PFGuid2PFAtt.msg  WayPointIndex.msg
Gazebo/ros_ws/src/msg_srv_act_interface/srv/: CollisionAvoidanceSetpoint.srv  MapInit.srv  PathFollowingGPR.srv  PathFollowingGuid.srv  PathFollowingSetpoint.srv  PathPlanningSetpoint.srv
Gazebo/tmp/PX4-Autopilot/msg/: CMakeLists.txt
Gazebo/tmp/gazebo_ros/src/model_spawn_srvs/: CMakeLists.txt
Gazebo/tmp/ros_ws/src/integration/: setup.cfg
Gazebo/worlds/: grass_dryden.world
PX4-Autopilot/ROMFS/px4fmu_common/init.d-posix/airframes/: 1016_QTR_inha  6013_typhoon_inha  CMakeLists.txt
PX4-Autopilot/ROMFS/px4fmu_common/mixers/: CMakeLists.txt  QTR.main.mix  hexa_qtr.main.mix
PX4-Autopilot/Tools/sitl_gazebo/models/QTR/: QTR.sdf  Untitled-1
PX4-Autopilot/Tools/sitl_gazebo/models/QTR_inha/: model.config
PX4-Autopilot/Tools/sitl_gazebo/models/pine_tree_middle/: model.sdf
PX4-Autopilot/Tools/sitl_gazebo/models/rplidar_a3/: model.config
PX4-Autopilot/msg/: CMakeLists.txt  attitude_command.msg  reinforce_control.msg  reinforce_flag.msg
PX4-Autopilot/msg/tools/: uorb_rtps_message_ids.yaml  urtps_bridge_topics.yaml
PX4-Autopilot/src/lib/mixer/MultirotorMixer/: CMakeLists.txt
QGroundControl.org/: QGroundControl.ini
QGroundControl.org/ParamCache/: 1_1.v2
ROS2-node/src/g_camera_lidar_sp/: package.xml  setup.cfg  setup.py
ROS2-node/src/g_camera_lidar_sp/g_camera_lidar_sp/: all.py  camera.py  lidar.py
ROS2-node/src/neuralnet/: package.xml  setup.cfg  setup.py
ROS2-node/src/neuralnet/neuralnet/: autopilot.py  collision_avoidance.py  path_planning.py  switch.py
ROS2-node/src/neuralnet/neuralnet/submodules/: data_buffer.py  functions.py
base/: Dockerfile
docs/: README.md  buildContainer.md  defineCustomMessage.md  defineCustomVehicle.md  quickStartManual.md  runContainer.md  scriptList.md  setupEnvironment.md
models/grass_plane/meshes/: grass.stl
models/rplidar_a3/: model.sdf
models/typhoon_h480/: typhoon_h480.sdf.jinja  typhoon_h480.sdf.last_generated
models/typhoon_inha/: model.config  typhoon_inha.sdf
novnc/: Dockerfile  README.md  run_sitl.sh
px4_ros/src/px4_msgs/msg/: ReinforceControl.msg  ReinforceFlag.msg
px4_ros/src/px4_ros_com/: CMakeLists.txt
px4_ros/src/rtps_command/rtps_command/: command.py
px4_ros_com_ros2/src/px4_msgs/msg/: AttitudeCommand.msg
px4_ros_com_ros2/src/rtps_command/: package.xml  setup.cfg  setup.py
scripts/: buildRos2Pkg.sh  docker-clean  initRepo.sh  pypkg.sh  rebuildPX4ros.sh  sources.list
sitl_gazebo/include/: gazebo_dryden_plugin.h
(+74 files in other folders)
