<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>msg_srv_act_interface</name>
  <version>0.0.1</version>
  <description>
    A4VAI 2nd Study Group Simulator for message, service and action interface
  </description>
  <maintainer email="kimsejoon@icloud.com">SeJun</maintainer>
  <license>Apache 2.0</license>
  <author email="kimsejoon@icloud.com">SeJun</author>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
